--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="game.css" />
+    <link rel="stylesheet" href="/styles/game.css" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
       integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
@@ -28,6 +28,15 @@
           <div id="hp-bar"></div>
           <span id="HP">100</span>
         </div>
+        <a
+          href="index.html"
+          style="
+            background-color: aliceblue;
+            color: black;
+            text-decoration: none;
+          "
+          >Home</a
+        >
       </infoBar>
       <arrows>
         <div></div>
@@ -50,5 +59,5 @@
       </arrows>
     </gameContainer>
   </body>
-  <script src="game.js"></script>
+  <script src="/scripts/game.js"></script>
 </html>
