--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Main Game Content -->
     <div id="game-content" class="hidden">
-      <h1>Pump It Up</h1>
+      <h1 style="color: aliceblue">Pump It Up</h1>
 
       <!-- Song Selection Section -->
       <div id="song-select">
@@ -30,7 +30,9 @@
         </div>
         <div class="song-preview">
           <div class="song-info">
-            <h2 id="selected-song-title">Select a Song</h2>
+            <h2 id="selected-song-title" style="color: aliceblue">
+              Select a Song
+            </h2>
             <p id="selected-song-artist"></p>
             <p id="selected-song-bpm"></p>
           </div>
