--- a/game.html
+++ b/game.html
@@ -21,7 +21,12 @@
     ></iframe>
     <gameContainer>
       <infoBar>
-        <p id="difficulty">Difficulty: MEDIUM</p>
+        <p
+          id="difficulty"
+          title="Press 4:Easy, 2:Normal, 8:Hard to change difficulty"
+        >
+          Difficulty: MEDIUM
+        </p>
         <p id="score">0</p>
         <p id="combo">COMBO: 0</p>
         <div class="hp-container">
@@ -34,6 +39,8 @@
             background-color: aliceblue;
             color: black;
             text-decoration: none;
+            padding: 1%;
+            border-radius: 10px;
           "
           >Home</a
         >
