[Update] - 2025 Update - White theme modern style - HP system - code refactored

--- a/finish.html
+++ b/finish.html
@@ -6,9 +6,10 @@
     <title>Game Finished</title>
     <style>
       body {
-        background: black;
-        color: white;
-        font-family: Arial, sans-serif;
+        background: linear-gradient(180deg, #f6f8fb 0%, #ffffff 100%);
+        color: #0f1724;
+        font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -18,35 +19,41 @@
       }
       .result {
         text-align: center;
-        padding: 20px;
-        background: rgba(255, 255, 255, 0.1);
-        border-radius: 10px;
+        padding: 30px;
+        background: #ffffff;
+        border-radius: 14px;
+        border: 1px solid rgba(15, 23, 42, 0.04);
+        box-shadow: 0 8px 24px rgba(16, 24, 40, 0.06);
       }
       .score {
         font-size: 48px;
-        color: #00ff00;
+        color: #10b981;
       }
       .combo {
-        font-size: 36px;
-        color: #ff00ff;
+        font-size: 28px;
+        color: #d946ef;
       }
       .reason {
         font-size: 24px;
-        color: #ffff00;
+        color: #2563eb;
         margin: 20px 0;
       }
       button {
         padding: 10px 20px;
-        font-size: 18px;
+        font-size: 16px;
         margin: 10px;
         cursor: pointer;
-        background: #333;
-        color: white;
-        border: 1px solid #666;
-        border-radius: 5px;
+        background: linear-gradient(90deg, #eef2ff, #f0fdf4);
+        color: #0f1724;
+        border: 1px solid rgba(15, 23, 42, 0.06);
+        border-radius: 6px;
+        font-weight: 600;
+        transition: all 0.18s ease;
       }
       button:hover {
-        background: #444;
+        background: linear-gradient(90deg, #e0e7ff, #dcfce7);
+        box-shadow: 0 8px 24px rgba(16, 24, 40, 0.06);
+        transform: translateY(-2px);
       }
     </style>
   </head>
