--- a/index.html
+++ b/index.html
@@ -13,26 +13,20 @@
       <div class="light-beam"></div>
       <div class="particles"></div>
     </div>
-    <!-- Intro Animation Section -->
     <div id="intro-animation" class="fullscreen">
       <img src="assets/logo.png" alt="Pump It Up Logo" class="logo" />
       <div class="loading-bar"></div>
     </div>
 
-    <!-- Main Game Content -->
     <div id="game-content" class="hidden">
-      <h1 style="color: aliceblue">Pump It Up</h1>
+      <h1>Pump It Up</h1>
 
-      <!-- Song Selection Section -->
       <div id="song-select">
         <div class="song-list">
-          <!-- Song items will be dynamically added here -->
         </div>
         <div class="song-preview">
           <div class="song-info">
-            <h2 id="selected-song-title" style="color: aliceblue">
-              Select a Song
-            </h2>
+            <h2 id="selected-song-title">No Song Selected</h2>
             <p id="selected-song-artist"></p>
             <p id="selected-song-bpm"></p>
           </div>
@@ -44,17 +38,14 @@
         </div>
       </div>
 
-      <!-- Game Container -->
       <div id="game-container" class="hidden"></div>
     </div>
 
-    <!-- Copyright Footer -->
     <footer>
-      <p>&copy; 2024 Wonhee Son. All rights reserved.</p>
+      <p>&copy; 2025 Wonhee Son. All rights reserved.</p>
       <p>Original game by Andamiro Co., Ltd.</p>
     </footer>
 
-    <!-- Scripts -->
     <script src="scripts/intro.js"></script>
     <script src="scripts/songSelect.js"></script>
     <script src="scripts/game.js"></script>
