[Add] - ranking system

--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
             <button data-difficulty="normal">Normal</button>
             <button data-difficulty="hard">Hard</button>
           </div>
+          <button id="start-game-btn" class="start-btn" style="margin-top: 15px; padding: 12px 30px; font-size: 20px; font-weight: bold; background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%); color: white; border: none; border-radius: 8px; cursor: pointer; box-shadow: 0 4px 6px rgba(0,0,0,0.1); width: 100%; display: none;">START GAME</button>
+        </div>
+
+        <div id="ranking-board" class="ranking-board">
+          <h3 style="margin: 0 0 10px 0; color: #333; font-size: 18px; border-bottom: 2px solid #7d8180; padding-bottom: 5px;">🏆 Top 5 Rankings</h3>
+          <ul id="main-rank-list" style="list-style: none; padding: 0; margin: 0;">
+          </ul>
         </div>
       </div>
 
